--- a/HTML/Tasks/Task1basicTags.html
+++ b/HTML/Tasks/Task1basicTags.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Home</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="icon"
     href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1HVNHQmF6XqXS0xqpvfcJFY3cQIAQEB3XmJ_edOZdMQ&s">
     <style>
@@ -25,9 +25,9 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1HVNHQmF6XqXS0xqpvfcJFY3cQIAQEB3XmJ_edOZdMQ&s"
         height="100" alt="html image">
     <br>
-    <audio src="../_Heeriye(PagalWorld.com.pe).mp3" controls>Audio Song</audio>
+    <audio src="C:\Users\shamb\Downloads\_Heeriye(PagalWorld.com.pe).mp3" controls>Audio Song</audio>
     <br>
-    <video src="./Berlin (2023) S01 EP03.mkv" controls>Video</video><br><br>
+    <video src="C:\Users\shamb\Downloads\Telegram Desktop\Berlin (2023) S01 EP03.mkv" controls>Video</video><br><br>
     <a href="https://youtu.be/SF9Fvuvk958" controls> video</a>
     <br>
     <hr>
@@ -94,6 +94,18 @@
             <td>1</td>
         </tr>
         <tr>
+            <td>Shambhu</td>
+            <td>basavaraj</td>
+            <td>kolgi</td>
+            <td>21</td>
+            <td>201</td>
+            <td>6364208701</td>
+            <td>21-08-2021</td>
+            <td>BCA</td>
+            <td>5</td>
+            <td>3</td>
+        </tr>
+        <tr>
             <td>Kiran</td>
             <td>Madhu</td>
             <td>Bengaluru</td>
@@ -115,6 +127,30 @@
         <td>MCA</td>
         <td>1</td>
         <td>1</td>
+        <tr>
+            <td>Shambhu</td>
+            <td>basavaraj</td>
+            <td>kolgi</td>
+            <td>21</td>
+            <td>201</td>
+            <td>6364208701</td>
+            <td>21-08-2021</td>
+            <td>BCA</td>
+            <td>5</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Nitin</td>
+            <td>Vasu</td>
+            <td>Bhatkal</td>
+            <td>21</td>
+            <td>202</td>
+            <td>6364208702</td>
+            <td>20-08-2021</td>
+            <td>BCA</td>
+            <td>4</td>
+            <td>2</td>
+        </tr>-
     </table>
     <hr>
     <dl>
@@ -156,7 +192,6 @@
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
-
 </body>
 
 </html>
