--- a/HTML/Classroom practice/Indx.html
+++ b/HTML/Classroom practice/Indx.html
@@ -93,6 +93,9 @@
     </div>
     <label for="">Time</label>
     <input type="time" name="" id="">
+    <div>
+        
+    </div>
 </body>
 
 </html>
